Bug 587421: PK11_PBEKeyGen leaks param because it checks type too late Patch contributed by Bob Relyea <rrelyea@redhat.com>, r=nelson